--- a/project.config
+++ b/project.config
@@ -44,6 +44,7 @@
 	label-Code-Review = -1..+1 group Logged-in Public Users
 	label-Commit-Queue = +0..+2 group Change Owner
 	label-Commit-Queue = +0..+2 group chromeos-auto-retry
+	label-Commit-Queue = +0..+2 group chromeos-auto-runner
 	label-Commit-Queue = +0..+2 group chromeos-bots
 	label-Commit-Queue = +0..+2 group chromeos-committers
 	label-Commit-Queue = +0..+2 group chromeos-internal-partners
