--- a/.github/workflows/chromiumos-mirror.yml
+++ b/.github/workflows/chromiumos-mirror.yml
@@ -9,8 +9,8 @@ jobs:
       - name: Mirror Google Source to GitHub
         run: |
           # 1. Clone the source as a bare mirror (metadata only, no working files)
-          git clone --mirror chromium.googlesource.com google-mirror
-          cd google-mirror
+          git clone --mirror https://chromium.googlesource.com/chromiumos chromiumos-mirror
+          cd chromiumos
           
           # 2. Set the destination to your current GitHub repo
           # The GITHUB_TOKEN is automatically provided by GitHub Actions
