--- a/.github/workflows/chromiumos-mirror.yml
+++ b/.github/workflows/chromiumos-mirror.yml
@@ -10,7 +10,7 @@ jobs:
         run: |
           # 1. Clone the source as a bare mirror (metadata only, no working files)
           git clone --mirror https://chromium.googlesource.com/chromiumos chromiumos-mirror
-          cd chromiumos
+          cd chromiumos-mirror
           
           # 2. Set the destination to your current GitHub repo
           # The GITHUB_TOKEN is automatically provided by GitHub Actions
