--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Parse and Mirror
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.MY_PAT }}
         run: |
           # 1. Extract the first X repository names from the manifest
           REPOS=$(grep -oP 'name="\K[^"]+' default.xml | head -n ${{ github.event.inputs.limit }})
